--- a/Contacto.html
+++ b/Contacto.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Módulo 3 - B.A.C.K</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contacto | B.A.C.K</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Chau+Philomene+One&display=swap" rel="stylesheet" />
   <style>
@@ -158,16 +158,20 @@
       display: block;
     }
 
-    /* Image Styling */
-    .example-image {
+    /* Image Placeholder */
+    .image-placeholder {
+      background-color: #e0e0e0;
       width: 100%;
-      max-width: 600px;
+      height: 200px;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #888;
+      font-style: italic;
       margin-bottom: 15px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.05);
+      user-select: none;
     }
 
     /* Next Steps Container */
@@ -190,6 +194,74 @@
         padding: 0 10px;
       }
     }
+
+    /* Repeated styles, can be merged but kept as original */
+    body {
+      font-family: 'Chau Philomene One', sans-serif;
+      background-color: #f9f9f9;
+      color: #0B121F;
+    }
+
+    .navbar {
+      background-color: #FFFFFF;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    }
+
+    .navbar-nav .nav-link {
+      color: #0B121F;
+    }
+
+    .contact-header {
+      background: linear-gradient(to right, #D28829, #37ACDB, #D28829);
+      color: #FFFFFF;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .contact-header h1 {
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+
+    .contact-form {
+      background-color: #FFFFFF;
+      border-radius: 12px;
+      padding: 40px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      margin-top: -40px;
+      z-index: 10;
+      position: relative;
+    }
+
+    .form-control:focus {
+      border-color: #37ACDB;
+      box-shadow: 0 0 0 0.2rem rgba(55, 172, 219, 0.25);
+    }
+
+    .btn-submit {
+      background-color: #D28829;
+      color: #fff;
+      border: none;
+    }
+
+    .btn-submit:hover {
+      background-color: #b56f1d;
+    }
+
+    .footer {
+      background-color: #0B121F;
+      color: #FFFFFF;
+      padding: 30px 20px;
+    }
+
+    .footer a {
+      color: #37ACDB;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 
@@ -205,117 +277,66 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="resultado.html">Resultados</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown">Módulos</a>
-            <ul class="dropdown-menu">
+            <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Módulos</a>
+            <ul class="dropdown-menu" aria-labelledby="productsDropdown">
               <li><a class="dropdown-item" href="modulo1.html">Introducción</a></li>
               <li><a class="dropdown-item" href="modulo2.html">Psicología del color</a></li>
-              <li><a class="dropdown-item" href="#">Diseño creativo</a></li>
+              <li><a class="dropdown-item" href="modulo3.html">Diseño creativo</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li> <!-- Aquí sin active -->
           <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <section class="hero">
-    <h1>Módulo 3: Diseño de Envolturas y Etiquetas Creativas</h1>
-    <p>Aprende a diseñar envolturas y etiquetas que comuniquen, protejan y conecten emocionalmente con el público infantil.</p>
-  </section>
+  <header class="contact-header">
+    <h1>Contáctanos</h1>
+    <p>¿Tienes preguntas o comentarios? ¡Escríbenos!</p>
+  </header>
 
-  <div class="container module-section">
-    <div class="module-box">
-      <h2>Objetivo del Módulo</h2>
-      <p>Dominar el diseño visual de envolturas y etiquetas llamativas, funcionales y seguras para productos infantiles. Este módulo te enseñará a estructurar gráficamente la información esencial, usar elementos ilustrativos, y crear una identidad visual coherente.</p>
-
-      <h3>Contenido</h3>
-      <ul>
-        <li>Tipos de envolturas: cajas, blisters, bolsas, sleeves y más.</li>
-        <li>Elementos esenciales de una etiqueta: logo, edad recomendada, advertencias, beneficios, códigos, etc.</li>
-        <li>Estilo gráfico: uso de personajes, tipografías amigables y jerarquía visual.</li>
-        <li>Requisitos de seguridad y materiales recomendados.</li>
-      </ul>
-
-      <h3>Explicación Visual</h3>
-
-      <div>
-        <img src="c6f25796530bb533cf394f2cc059c9fd.jpg" alt="Ejemplo de etiqueta con personajes y colores vivos" class="example-image" />
-      </div>
-      <p>El uso de ilustraciones simpáticas, fuentes legibles y colores contrastantes ayuda a captar la atención del niño y transmite alegría y confianza.</p>
-
-      <div>
-        <img src="b0b658177fd07f7842b7e0a40189706a.jpg" alt="Diseño de envoltura funcional con ventana transparente" class="example-image" />
-      </div>
-      <p>Las ventanas que permiten ver el producto generan confianza en los padres y aumentan el interés del niño. El empaque debe proteger, pero también mostrar lo que ofrece.</p>
-
-      <h4>Tips para un diseño exitoso:</h4>
-      <ul>
-        <li>Usa elementos gráficos grandes y claros, adaptados al nivel visual del niño.</li>
-        <li>Equilibra estética y funcionalidad. Piensa en cómo se abre, manipula y almacena.</li>
-        <li>Asegúrate de incluir toda la información obligatoria (edad, advertencias, etc.).</li>
-        <li>Utiliza materiales seguros, resistentes y sostenibles si es posible.</li>
-      </ul>
-
-      <h3>Actividad</h3>
-      <p>Crea una propuesta de diseño para una envoltura o etiqueta de un producto infantil:</p>
-      <ul>
-        <li>Incluye nombre del producto, logotipo, colores, tipografía, información clave y elementos visuales.</li>
-        <li>Puedes hacerlo en forma de maqueta digital o boceto ilustrado.</li>
-        <li>Agrega una explicación breve sobre las decisiones de diseño tomadas.</li>
-      </ul>
-
-      <h4>Checklist: ¿Tu diseño está listo?</h4>
-      <ul>
-        <li>¿La etiqueta comunica el mensaje de manera clara?</li>
-        <li>¿Los elementos visuales están organizados con jerarquía?</li>
-        <li>¿La propuesta es segura, atractiva y funcional?</li>
-        <li>¿Tu diseño refleja una identidad de marca coherente?</li>
-      </ul>
-
-      <div class="upload-box mt-4" id="uploadBox">
-        <p><strong>🔽 Sube tu análisis y propuesta aquí (JPG, PNG, PDF):</strong></p>
-        <input type="file" class="form-control mb-2" id="fileInput" />
-        <button class="btn btn-warning text-white" id="submitBtn">Enviar trabajo</button>
-
-        <div class="spinner-border text-warning mt-3" role="status" id="spinner" style="display: none;">
-          <span class="visually-hidden">Cargando...</span>
+  <div class="container">
+    <div class="contact-form shadow-lg">
+      <form>
+        <div class="mb-3">
+          <label for="name" class="form-label">Nombre completo</label>
+          <input type="text" class="form-control" id="name" placeholder="Tu nombre" />
         </div>
-      </div>
-
-      <div class="container text-center mt-4" id="nextSteps" style="display: none;">
-        <div class="alert alert-success" role="alert">
-          🎉 <strong>¡Felicidades!</strong> Has terminado tu trabajo. Visita la pestaña de <strong>Resultados</strong> para saber tu calificación.
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="email" placeholder="tucorreo@ejemplo.com" />
         </div>
-        <a href="index.html" class="btn btn-secondary m-2">Volver al inicio</a>
-      </div>
+        <div class="mb-3">
+          <label for="subject" class="form-label">Asunto</label>
+          <input type="text" class="form-control" id="subject" placeholder="Motivo de tu mensaje" />
+        </div>
+        <div class="mb-3">
+          <label for="message" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="message" rows="5" placeholder="Escribe tu mensaje aquí..."></textarea>
+        </div>
+        <button type="submit" class="btn btn-submit">Enviar Mensaje</button>
+      </form>
     </div>
   </div>
 
-  <script>
-    document.getElementById("submitBtn").addEventListener("click", function () {
-      const fileInput = document.getElementById("fileInput");
-      const spinner = document.getElementById("spinner");
-      const submitBtn = document.getElementById("submitBtn");
-      const nextSteps = document.getElementById("nextSteps");
-
-      if (!fileInput.files.length) {
-        alert("Por favor, selecciona un archivo antes de enviar.");
-        return;
-      }
-
-      submitBtn.disabled = true;
-      spinner.style.display = "inline-block";
-
-      setTimeout(() => {
-        spinner.style.display = "none";
-        submitBtn.innerHTML = "Enviado ✅";
-        submitBtn.classList.remove("btn-warning");
-        submitBtn.classList.add("btn-success");
-        nextSteps.style.display = "block";
-      }, 2000);
-    });
-  </script>
+  <footer class="footer mt-5">
+    <div class="container d-flex flex-column flex-md-row justify-content-between">
+      <div>
+        <h6>Contacto</h6>
+        <p>gustalinares777@gmail.com<br />marianah04montoya@gmail.com</p>
+      </div>
+      <div>
+        <h6>Redes Sociales</h6>
+        <a href="#">Facebook</a> |
+        <a href="#">Instagram</a> |
+        <a href="#">Twitter</a>
+      </div>
+      <div class="text-md-end">
+        <p>© 2025 B.A.C.K - Be Art, Create Knowledge</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
