--- a/index.html
+++ b/index.html
@@ -1,131 +1,289 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo Infantil</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B.A.C.K | Diseño de Empaques Infantiles</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chau+Philomene+One&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Chau Philomene One', sans-serif;
+      background-color: #f9f9f9;
+      color: #1D1D1D;
+    }
+
+    .navbar {
+      background-color: #FFFFFF;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 0.5rem 1rem;
+    }
+
+    .navbar-nav .nav-link {
+      color: #0B121F;
+      margin: 0 8px;
+      padding: 8px 14px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .navbar-nav .nav-link:hover {
+      background-color: rgba(183, 221, 255, 0.3);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.35);
+      transform: translateY(-1px);
+    }
+
+    .hero {
+      background: linear-gradient(to right, #D28829, #37ACDB, #D28829);
+      color: #FFFFFF;
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    .hero h1 {
+      text-transform: uppercase;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+    }
+
+    .hero button {
+      background-color: #FFFFFF;
+      color: #B55D32;
+      border: none;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .hero button:hover {
+      background-color: #B55D32;
+      color: #FFFFFF;
+    }
+
+    .carousel-inner img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+      filter: invert(1);
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+      background: none;
+    }
+
+    .modulos-section {
+      background-color: #f0f2f5;
+      padding: 40px 20px;
+      border-radius: 16px;
+      box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.05);
+      margin-top: 40px;
+    }
+
+    .article-box {
+      background-color: #FFFFFF;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      height: 100%;
+    }
+
+    .article-box:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 20px rgba(183, 221, 255, 0.5);
+    }
+
+    .article-box img {
+      width: 100%;
+      height: auto;
+      max-height: 220px;
+      object-fit: contain;
+      border-radius: 6px;
+    }
+
+    .footer {
+      background-color: #0B121F;
+      color: #FFFFFF;
+      padding: 30px 20px;
+    }
+
+    .footer a {
+      color: #37ACDB;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
+
+    @keyframes pulse {
+      0% {
+        box-shadow: 0 0 0 0 rgba(211, 111, 20, 0.4);
+      }
+
+      70% {
+        box-shadow: 0 0 0 10px rgba(211, 111, 20, 0);
+      }
+
+      100% {
+        box-shadow: 0 0 0 0 rgba(211, 111, 20, 0);
+      }
+    }
+
+    .highlight-animate {
+      animation: pulse 1.5s ease-out;
+    }
+  </style>
 </head>
+
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f9b233;">
-    <div class="container-fluid">
-      <img src="Sin_título-1-removebg-preview (1).png" alt="Logo" class="navbar-logo">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="logo.png" alt="Logo" style="height: 40px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <div class="d-flex gap-2">
-          <div class="btn btn-light rounded-pill px-3 py-1">Perfil</div>
-          <div class="btn btn-light rounded-pill px-3 py-1">Resultados</div>
-          <a href="queesback.html">
-          <div class="btn btn-light rounded-pill px-3 py-1">¿Qué es B.A.C.K?</div></a>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="resultado.html">Resultados</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown">Módulos</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="modulo1.html">Introducción</a></li>
+              <li><a class="dropdown-item" href="modulo2.html">Psicología del color</a></li>
+              <li><a class="dropdown-item" href="modulo3.html">Diseño creativo</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+        </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Carrusel principal -->
-  <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <!-- Slide 1 activo -->
-      <div class="carousel-item active">
-        <img src="ChatGPT Image 10 abr 2025, 08_57_53 p.m..png" class="d-block w-100" alt="Slide 1">
-        <div class="carousel-caption d-block">
-          <p class="text-light">En B.A.C.K fomentamos la creatividad y la ética en el diseño de empaques mediante herramientas multimediales innovadoras. Con "Be Art" desarrollas tu lado creativo y con "Be Knowledge" adquieres habilidades para una gestión efectiva. Más que enseñar a diseñar, creamos una comunidad de aprendizaje y colaboración. Únete y descubre el mundo del diseño de empaques con nosotros.</p>
-        </div>
-      </div>
-      <!-- Slide 2 -->
-      <div class="carousel-item">
-        <img src="2.png" class="d-block w-100" alt="Slide 2">
-        <div class="carousel-caption d-block">
-          <p class="text-light">En B.A.C.K fomentamos la creatividad y la ética en el diseño de empaques mediante herramientas multimediales innovadoras. Con "Be Art" desarrollas tu lado creativo y con "Be Knowledge" adquieres habilidades para una gestión efectiva. Más que enseñar a diseñar, creamos una comunidad de aprendizaje y colaboración. Únete y descubre el mundo del diseño de empaques con nosotros.</p>
-        </div>
-      </div>
-      <!-- Slide 3 -->
-      <div class="carousel-item">
-        <img src="Diseño sin título (1).png" class="d-block w-100" alt="Slide 3">
-        <div class="carousel-caption d-block">
-          <p class="text-light">En B.A.C.K fomentamos la creatividad y la ética en el diseño de empaques mediante herramientas multimediales innovadoras. Con "Be Art" desarrollas tu lado creativo y con "Be Knowledge" adquieres habilidades para una gestión efectiva. Más que enseñar a diseñar, creamos una comunidad de aprendizaje y colaboración. Únete y descubre el mundo del diseño de empaques con nosotros.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-
-<!-- Sección azul oscura con botones -->
-<section class="dark-section text-center">
-  <div class="container">
-    <div class="d-flex flex-column flex-md-row justify-content-center gap-4">
-      <a href="modulo1.html" class="text-decoration-none text-white">
-        <button class="btn light-card flex-fill p-4 position-relative" style="min-width: 280px;">
-          <div class="title-box">
-            Introducción al Diseño de Empaques Infantiles
-          </div>
-          <p class="mt-5">Conoce los principios básicos para crear empaques atractivos y funcionales para el público infantil.</p>
-        </button>
-      </a>
-      <a href="modulo2.html" class="text-decoration-none text-white">
-        <button class="btn light-card flex-fill p-4 position-relative" style="min-width: 280px;">
-          <div class="title-box">
-            Psicología del Color y Diseño para Niños
-          </div>
-          <p class="mt-5">Aprende a usar el color estratégicamente para conectar con niños y potenciar el impacto del diseño.</p>
-        </button>
-      </a>
-      <a href="modulo3.html" class="text-decoration-none text-white">
-        <button class="btn light-card flex-fill p-4 position-relative" style="min-width: 280px;">
-          <div class="title-box">
-            Diseño de Envolturas y Etiquetas Creativas
-          </div>
-          <p class="mt-5">Explora técnicas para diseñar envolturas y etiquetas que cautivan, comunican y destacan en el mercado.</p>
-        </button>
-      </a>
-    </div>
-  </div>
-</section>
-
+  <section class="hero">
+    <h1><em>¡Bienvenido a B.A.C.K!</em></h1>
+    <p>Tu plataforma para aprender diseño de empaques infantiles con creatividad y propósito.</p>
+    <button class="btn mt-3" id="explorarBtn">Explorar Curso</button>
   </section>
 
-  <!-- Catálogo de productos -->
-  <section class="catalogo py-4">
-    <div class="container">
-      <h2 class="text-center mb-4">Catálogo</h2>
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-8">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="ChatGPT Image 10 abr 2025, 08_57_53 p.m..png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LUwMsRFcjDE?si=dehlvtAFbmsD3ULN"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="ChatGPT Image 10 abr 2025, 08_57_53 p.m..png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="article-box">
+          <h5>¿Qué es B.A.C.K?</h5>
+          <p>Una plataforma de formación en línea especializada en diseño de empaques para productos infantiles y juguetes.</p>
+          <p>Aprende a crear empaques seguros, llamativos, sostenibles y funcionales con enfoque en niños y sus familias.</p>
+          <p>¡Conviértete en experto en empaques infantiles!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-5">
+      <h2>¿Por qué aprender diseño de empaques infantiles?</h2>
+      <p>El empaque es más que protección: es la primera conexión emocional con el consumidor. En productos infantiles, este impacto visual debe ser inmediato y positivo.</p>
+      <p>Aprenderás a diseñar empaques creativos y funcionales, basados en la psicología del color, la ergonomía, la interacción y la sostenibilidad. Ideal para diseñadores, emprendedores, estudiantes y profesionales del marketing.</p>
+    </div>
+
+    <div class="modulos-section" id="modulos">
       <div class="row">
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="ChatGPT Image 11 abr 2025, 12_35_34 a.m..png" alt="Empaque infantil de estilo colorido - 1">
+        <div class="col-md-4">
+          <div class="article-box text-center">
+            <img src="post de instagram asesor imagen minimalista neutro.png" class="img-fluid mb-2" alt="...">
+            <p><strong><a href="modulo1.html" class="text-decoration-none text-dark">Módulo 1</a></strong><br>
+              <a href="modulo1.html" class="text-decoration-none text-dark">Introducción al Diseño de Empaques Infantiles</a>
+            </p>
+          </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="ChatGPT Image 16 abr 2025, 12_50_10 a.m..png" alt="Empaque infantil de estilo colorido - 2">
+        <div class="col-md-4">
+          <div class="article-box text-center">
+            <img src="post de instagram asesor imagen minimalista neutro (1).png" class="img-fluid mb-2" alt="...">
+            <p><strong><a href="modulo2.html" class="text-decoration-none text-dark">Módulo 2</a></strong><br>
+              <a href="modulo2.html" class="text-decoration-none text-dark">Psicología del Color y Diseño para Niños</a>
+            </p>
+          </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="ChatGPT Image 16 abr 2025, 12_50_14 a.m..png" alt="Empaque infantil de estilo colorido - 3">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="ChatGPT Image 16 abr 2025, 12_50_19 a.m..png" alt="Empaque infantil de estilo colorido - 4">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="una caja de empaque infantil de un alimento cualquiera con un estilo coloreado dirigido a infanters.png" alt="Empaque infantil de alimento - 1">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="una caja de empaque infantil de un alimento cualquiera con un estilo coloreado dirigido a infantes.png" alt="Empaque infantil de alimento - 2">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="una caja de empaque infantil de un alimento cualquiera con un estilo coloreado dirigido a infantes1.png" alt="Empaque infantil de alimento - 3">
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img src="Diseño sin título.png" alt="Empaque infantil de alimento - 4">
+        <div class="col-md-4">
+          <div class="article-box text-center">
+            <img src="post de instagram asesor imagen minimalista neutro (2).png" class="img-fluid mb-2" alt="...">
+            <p><strong><a href="modulo3.html" class="text-decoration-none text-dark">Módulo 3</a></strong><br>
+              <a href="modulo3.html" class="text-decoration-none text-dark">Envolturas y Etiquetas Creativas</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+
+  <footer class="footer">
+    <div class="container d-flex flex-column flex-md-row justify-content-between">
+      <div>
+        <h6>Contacto</h6>
+        <p>gustalinares777@gmail.com<br>marianah04montoya@gmail.com</p>
+      </div>
+      <div>
+        <h6>Redes Sociales</h6>
+        <a href="#">Facebook</a> |
+        <a href="#">Instagram</a> |
+        <a href="#">Twitter</a>
+      </div>
+      <div class="text-md-end">
+        <p>© 2025 B.A.C.K - Be Art, Create Knowledge</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.getElementById("explorarBtn").addEventListener("click", function () {
+      const seccion = document.getElementById("modulos");
+      seccion.scrollIntoView({ behavior: "smooth" });
+      seccion.classList.add("highlight-animate");
+      setTimeout(() => {
+        seccion.classList.remove("highlight-animate");
+      }, 1600);
+    });
+  </script>
 </body>
+
 </html>
