--- a/modulo2.html
+++ b/modulo2.html
@@ -194,7 +194,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="logo-removebg-preview.png" alt="Logo" style="height: 40px" /></a>
+      <a class="navbar-brand" href="index.html"><img src="logo.png" alt="Logo" style="height: 40px" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
